fix issue with diffusers 0.29.1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 #torch==1.13.1
 #torchvision==0.14.1
-transformers
-diffusers
+transformers==4.41.2
+diffusers==0.29.1
 accelerate
 huggingface-hub
 ninja
